<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_2">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContentLayout"
        style="@style/CardViewTopRadius"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/loadingGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="loading, loadingText"
                tools:visibility="gone" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/teal_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loadingText"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/match_buddy_loading_text"
                android:textAllCaps="true"
                android:textColor="@color/teal_500"
                app:layout_constraintEnd_toEndOf="@id/loading"
                app:layout_constraintStart_toStartOf="@id/loading"
                app:layout_constraintTop_toBottomOf="@id/loading" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="60dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/characterName"
                style="@style/TitleText.Bold"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:gravity="center"
                android:textColor="@color/teal_500"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toTopOf="@id/topGuideline"
                tools:text="Rick Sanchez" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buddyName"
                style="@style/TitleText.Bold"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/teal_500"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintTop_toTopOf="@id/topGuideline"
                tools:text="Morty Smith" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/meetingPointLabel"
                style="@style/ExtraHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/match_buddy_location"
                android:textColor="@color/teal_700"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/characterName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/locationText"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_500"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/meetingPointLabel"
                tools:text="Citadel of Ricks" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/episodesLabel"
                style="@style/ExtraHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/match_buddy_episodes_together"
                android:textColor="@color/teal_700"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/locationText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/episodesText"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_500"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/episodesLabel"
                tools:text="100" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/firstTimeLabel"
                style="@style/ExtraHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/match_buddy_first_time_together"
                android:textColor="@color/teal_700"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/episodesText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/firstTimeText"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_500"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/firstTimeLabel"
                tools:text="30/02/2012" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lastTimeLabel"
                style="@style/ExtraHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/match_buddy_last_time_together"
                android:textColor="@color/teal_700"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/firstTimeText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lastTimeText"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_500"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/lastTimeLabel"
                tools:text="30/02/2022" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/buddyGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="buddyName,meetingPointLabel,locationText,episodesLabel,episodesText,firstTimeText,firstTimeLabel,lastTimeLabel,lastTimeText"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/selectedCharacterImage"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginBottom="-60dp"
        android:elevation="4dp"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/cardContentLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.CircularBorder"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/buddyMatchedImage"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginBottom="-60dp"
        android:elevation="4dp"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/cardContentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.CircularBorder"
        tools:srcCompat="@drawable/ic_launcher_background"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>